# Artificial-Intelligence-Optimized-Structural-Active-Control

./: AI_Comparison.m  EQ1.mat  Elcentro.mat  Experiment.m  Hualien.mat  LF Experiment.xlsx  Manual.m  README.md  RL_gains.txt  TF.slx
Experiment/: LR Experiment.xlsx
rl_training/: .gitignore  README.md  RL.md  TF.slx  out.mat  pid_rl_optimization.ipynb  pyproject.toml
